# bodhi-plymouth-themes

./: README.md
bodhi-boss/: INSTALL.md  README.md  meson.build
bodhi-boss/debian/: changelog  control  copyright  plymouth-theme-bodhi-boss.lintian-overrides  plymouth-theme-bodhi-boss.prerm  rules
bodhi-boss/scr/: meson.build
