install_data([ 'fsck-fade.png',
               'logo.png',
               'bodhi-boss.script',
               'bodhi-boss.plymouth',
               'passw-dialog.png',
               'progress-fade.png',
               'progress-meter.png',
               'spinner.png',
               'test.png',
               'wallpaper.png'
             ],
             install_dir: join_paths(dir_data, proj)
            )
